Updated to add UI
- Added buttons for user(s) to select the input
- Added a paragraph tag to display result
- Changed title of the page
- Added heading to ask for the input
- Moved script.js to the end of the <body> tag

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors in Browser Console</title>
-    <script src="./script.js"></script>
+    <title>Rock Paper Scissors</title>
 </head>
 <body>
+
+    <h1>Please Click to Select Your Choice</h1>
+    <button id="rock">ROCK</button>
+    <button id="paper">PAPER</button>
+    <button id="scissors">SCISSORS</button>
+    <p id="result"></p>
     
+    <script src="./script.js"></script>
 </body>
 </html>
